# TSFM_Finance

./: .gitignore  Convert.py  LOAD_MODEL_README.md  README copy.md  README.md  debug_config.py  example_load_from_hf.py  inspect_checkpoint.py  load_model_from_hf.py  modeling_timesfm.py  pyproject.toml  requirements.txt
config/: demo.yaml
data/: two_stocks_excess_returns.csv
foundation_models_for_finance/: timesfm_loader.py
notebooks/: multi-step-plot.ipynb  predict-with-chronos1.ipynb  predict-with-timesfm1.ipynb  walktrhough.ipynb
notebooks/.ipynb_checkpoints/: predict-with-chronos1-checkpoint.ipynb
scripts/: validate_env.py
tsfm_finance/: timesfm_loader.py
